Quiting.. Jwt authentication implementation failed